<resources>
	<string name="title_activity_comic">ComicActivity</string>
	<string name="app_name">Web Comic Reader</string>

	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>

	<string name="action_clear_cache">Clear cache</string>
	<string name="action_offline_mode">Offline mode</string>
	<string name="action_hide_ad">Hide ad temporarily</string>
	<string name="action_settings">Settings</string>
	<string name="action_help">Help</string>

	<string name="preferences">preferences</string>
	<string name="preference_left_off_alias">preference_alias</string>
	<string name="preference_offline">preference_offline</string>

	<string name="cached_images">cachedImages</string>

	<!--General errors-->
	<string name="error_no_internet">No internet access detected</string>
	<string name="error_no_webcomics">You have no webcomics, try adding some</string>
	<string name="error_no_image_found">No suitable image found</string>
	<string name="error_no_loaded_webcomic">No webcomic loaded, try selecting one through the navigation bar</string>
	<string name="error_no_image_id">Sorry this webcomic cannot be used with the ID method, please choose another
		method
	</string>
	<string name="error_no_link_id">Sorry this url does not support buttons</string>
	<string name="error_no_internet_feature">Sorry your internet must be enabled to use this feature</string>

	<!--ComicActivity check errors-->
	<string name="error_url_invalid">Invalid url entered</string>
	<string name="error_website_doesnt_exist">Cannot contact the website is it down?</string>
	<string name="error_alias_exists">Alias already exists</string>
	<string name="error_alias_empty">Alias field empty</string>
	<string name="error_invalid_method">Invalid method, please choose another one</string>
	<string name="error_buttons_not_found">Could not find buttons, did the site structure change?</string>
	<string name="error_webcomic_doesnt_support">This webcomic doesn\'t support buttons did you enable it while adding
		it?
	</string>

	<!--Network errors-->
	<string name="error_failed_network">Webview failed to download</string>
	<string name="error_failed_image_download">Image failed to download</string>
	<string name="error_failed_button">Failed to find button on url</string>
	<string name="error_failed_finding_image">Failed trying to find image on url</string>

	<!--XML Activity Strings-->
	<string name="string_add_comic">Add Comic</string>
	<string name="string_comics">Comics</string>
	<string name="string_add_new_comic">Add New Comic</string>
	<string name="string_comic_url">Comic URL</string>
	<string name="string_alias">Alias</string>
	<string name="string_extraction_method">Image Extraction Method</string>
	<string name="string_supports">Supports next and previous button</string>
	<string name="string_add_comic_l">Add comic</string>
	<string name="error_webcomic_already_added">This webcomic has already been added</string>

	<string name="method_descriptions">
		Structure: Should work on any website but if the website changes this method won\'t work anymore\n\n
		ID: This method only works on a couple of websites but it is by the far the most reliable and fastest. While this method can technically work if the website changes, certain chnages can upset it\n\n
		Heuristic: This method uses the image sizes and other metadata to try and guess the most suitable image. This method is quite slow due to partial downloading of every image on the page
	</string>
</resources>
