<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	  xmlns:app="http://schemas.android.com/apk/res-auto">
	<item
		android:id="@+id/action_offline"
		android:title="@string/action_offline_mode"
		android:checkable="true"
		android:visible="false"/>
	<item
		android:id="@+id/action_clear_cache"
		android:title="@string/action_clear_cache"
		app:showAsAction="never"/>
	<item
		android:id="@+id/action_hide_ad"
		android:title="@string/action_hide_ad"
		app:showAsAction="never"
		android:visible="false"/>
	<item
		android:id="@+id/action_settings"
		android:title="@string/action_settings"
		app:showAsAction="never"
		android:visible="false"/>
	<item
		android:id="@+id/action_help"
		android:orderInCategory="100"
		android:title="@string/action_help"
		app:showAsAction="never"/>
</menu>
